# rotbl

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yaml  coverage.yml
benchmark/: Cargo.toml
benchmark/src/: main.rs
rotbl/: Cargo.toml
rotbl/src/: buf.rs  io_util.rs  lib.rs  num.rs
rotbl/src/codec/: checksum_reader.rs  fixed_size.rs  mod.rs  with_checksum.rs
rotbl/src/storage/: mod.rs
rotbl/src/storage/impls/: fs.rs
rotbl/src/typ/: mod.rs  typ.rs  typ_test.rs
rotbl/src/v001/: bincode_config.rs  block.rs  block_cache.rs  block_encoding_meta.rs  block_id.rs  block_index.rs  block_stream.rs  cache_stat.rs  checksum_reader.rs  checksum_writer.rs  config.rs  db.rs  footer.rs  header.rs  marked.rs  mod.rs  range.rs  rotbl.rs  rotbl_io.rs  rotbl_io_get.rs  rotbl_io_stream.rs  rotbl_meta.rs  rotbl_meta_payload.rs  segment.rs  tseq.rs  types.rs  with_checksum.rs
rotbl/src/v001/rotbl/: access_stat.rs  builder.rs  dump.rs  io_driver.rs  io_driver_get.rs  io_driver_stream.rs  mod.rs  rotbl_async_test.rs  rotbl_test.rs  stat.rs
rotbl/src/v001/rotbl/tests/: mod.rs  rotbl_async_test.rs  rotbl_cache_test.rs  rotbl_test.rs
rotbl/src/v001/testing/: mod.rs
rotbl/src/v00x/: mod.rs
rotbl/src/v00x/var_len_array/: array.rs  array_codec_test.rs  builder.rs  builder_test.rs  mod.rs  payload.rs
rotbl/src/version/: mod.rs  ver.rs  ver_tests.rs
rotbl/tests/: test_bincode_compat.rs  test_compat.rs
rotbl/tests/api/: context.rs  main.rs  temp_table.rs  test_create_open.rs  test_dump.rs  test_rotbl_block.rs  test_rotbl_cache_stat.rs  test_rotbl_read.rs  utils.rs
rotbl/tests/compat/: README.md
rotbl/tests/compat/0.1.2/: dump.txt
rotbl/tests/compat/0.2.1/db/: x.rot
rotbl/tests/compat/0.2.4/: dump.txt
