[workspace.package]
version = "0.1.1"
edition = "2021"
authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>", 
]
categories = ["algorithms", "data-structures"]
description = "Read Only Table"
documentation = "https://docs.rs/rotbl"
homepage = "https://github.com/drmingdrmer/rotbl"
keywords = ["readonly", "table", "sstable"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/rotbl"


[workspace.dependencies]

# data flow
futures              = { version = "0.3" }
futures-async-stream = { version = "0.2.9" }
itertools            = { version = "0.11.0" }

# runtime
tokio                = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }

# data structure
lru-cache         = { git = "https://github.com/drmingdrmer/lru-cache", tag = "v0.1.4-alpha.4" }
maplit            = { version = "1.0.2" }

# error handling
anyhow            = { version = "1.0.63" }

# serialization
byteorder         = { version = "1.4.3" }
bytes             = { version = "1.0" }
crc32fast         = { version = "1.3.2" }
serde             = { version = "1.0.114", features = ["derive", "rc"]}
serde_json        = { version = "1.0.57" }

# testing
pretty_assertions = { version = "1.0.0" }
tempfile          = { version = "3.4.0" }



# compare           = { version = "0.1.0" }
# binary-heap-plus  = { version = "0.5.0" }
# anyerror = { version = "0.1.8" }
# async-entry = "0.3.1"
# async-trait = "0.1.36"
# byte-unit = "4.0.12"
# clap = { version = "4.1.11", features = ["derive", "env"] }
# derive_more = { version="0.99.9" }
# lazy_static = "1.4.0"
# pin-utils = "0.1.0"
# rand = "0.8"
# thiserror = "1.0.33"
# tokio = { version="1.8", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
# tokio-stream = { version="0.1.14", features=["full"] }
# tracing = { version = "0.1.29" }
# tracing-appender = "0.2.0"
# tracing-futures = "0.2.4"
# tracing-subscriber = { version = "0.3.3",  features=["env-filter"] }






# [patch.crates-io]
# binary-heap-plus = { path = "../binary-heap-plus-rs" }


[workspace]

resolver = "2"

members = [
    "rotbl",
]
exclude = [
]
