[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rotbl = { path = "../rotbl" }
tokio = { workspace = true, features = ["full"] }
futures              = { workspace = true }
